--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hero">
           <div class="hero-text-box">
             <p class="hero-des">I AM</p>
-            <h1 class="hero-title">shinin babu</h1>
+            <h1 class="hero-title">shinin</h1>
             <div class="title-text-box">
               <p class="text-title"><span>UI/UX</span> Developer</p>
               <p class="text-title"><span>Business</span> Development</p>
