Updated form action and methods

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 /></a>
               </div>
             </div>
-            <form class="form" netlify>
+            <form action="https://formspree.io/f/mlggepqn" method="POST">
               <p class="equiry">Enquiry</p>
               <div class="form-box">
                 <input
